[package]
name = "vpk"
description = "Valve Pak format parser for Rust"
version = "0.1.4"
license = "MIT"
authors = [
    "Roman Shishkin <spark@uwtech.org>",
    "Robin Appelman <robin@icewind.nl>",
]
repository = "https://github.com/roman901/vpk-rs"
edition = "2021"

[dependencies]
thiserror = "1.0.20"
indexmap = "2.1.0"
cachedhash = "0.1.2"
memchr = "2.6.4"
ahash = "0.8.6"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "load"
harness = false

[[bench]]
name = "parse"
harness = false
